# CompetencyProject

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 397b6181db45_add_title_platform_and_transcribed_text_.py  43f340da46ed_initial_migration.py  561eb74a07e7_remove_unique_constraint_from_job_film_.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: get_result.py  get_status.py  initiate_analysis.py
backend/app/core/: config.py
backend/app/crud/: crud_analysis.py  crud_film.py  crud_job.py
backend/app/db/models/: __init__.py  analysis.py  film.py  job.py
backend/app/downloader/: service.py
backend/app/nlp/: definitions.py  dependencies.py  engine.py  service.py
backend/app/orchestrator/: pipeline.py
backend/app/schemas/: __init__.py  analysis.py  film.py  job.py
backend/app/transcription/: service.py
backend/core/: settings.py  urls.py
backend/nlp_core/: models.py  serializers.py  views.py
backend/nlp_core/migrations/: 0001_initial.py
backend/scripts/: download_models.py
backend/tests/: conftest.py  test_nlp_core.py
backend/tests/api/: test_analysis.py
backend/tests/nlp/: test_engine.py
backend/tests/performance/: locustfile.py  run_mock_server.py
backend/tests/unit/: test_nlp_engine_mock.py  test_services.py
docs/: README.md
docs/output/: diagramy.md  prezentacja.pptx
docs/source/: analiza_rozwiazan.docx  architektura.tex  plan_testow.docx  raport_z_testow.tex  tydzien5_baza_i_ui.docx  wizja.docx
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/context/: VideosContext.jsx
(+22 files in other folders)
